FIRST_IP_WEBHOOK_AFTER

--- a/.env.example
+++ b/.env.example
@@ -6,8 +6,8 @@ PATTERNS_TOKEN=CHANGE_ME
 WEBHOOK_URL=https://your-domain.example/api/remnanode/webhook
 WEBHOOK_TOKEN=CHANGE_ME
 
-# Имя ноды (в payload)
-NODE_NAME=US-3
+# OPTIONAL override (обычно не нужен)
+NODE_IP_OVERRIDE=
 
 # Опционально
 PATTERNS_POLL=60s
@@ -16,6 +16,11 @@ ALERT_QUEUE=256
 
 # Если используешь docker exec режим
 CONTAINER_NAME=remnanode
+
+# Used only for patterns with banType=FIRST_IP_WEBHOOK_AFTER
+NFT_BAN_CMD=nft add element inet remnaguard blocked_ipv4 { %IP% }
+NFT_BAN_TIMEOUT=800ms
+NFT_BAN_DEDUP_TTL=3600s
 
 # Если используешь файловый режим (Вариант A)
 LOG_FILE=/logs/xray.out.log
